links will open in new tab

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <img class="profile_pic" src="img/sazid.jpg" alt="sazid-saleem">
             <h1>Sazid Saleem</h1>
             <h3>Front-End Developer</h3>
-            <a href="mailto:mr.cool.8211@gmail.com"><button type="button" class="btn-lg btn-dark email-button">&nbsp;&nbsp;&nbsp;Email me&nbsp;&nbsp;&nbsp;</button></a>
+            <a target="_blank" href="mailto:mr.cool.8211@gmail.com"><button type="button" class="btn-lg btn-dark email-button">&nbsp;&nbsp;&nbsp;Email me&nbsp;&nbsp;&nbsp;</button></a>
             <div>
-              <a href="https://www.facebook.com/Chaos.821"><i class="social_icons fa-3x fa-brands fa-facebook"></i></a>
-              <a href="http://instagram.com"><i class="social_icons fa-3x fa-brands fa-instagram"></i></a>
-              <a href="http://twitter.com"><i class="social_icons fa-3x fa-brands fa-twitter"></i></a>
-              <a href="http://linkedin.com"><i class="social_icons fa-3x fa-brands fa-linkedin"></i></a>
+              <a target="_blank" href="https://www.facebook.com/Chaos.821"><i class="social_icons fa-3x fa-brands fa-facebook"></i></a>
+              <a target="_blank" href="http://instagram.com"><i class="social_icons fa-3x fa-brands fa-instagram"></i></a>
+              <a target="_blank" href="http://twitter.com"><i class="social_icons fa-3x fa-brands fa-twitter"></i></a>
+              <a target="_blank" href="http://linkedin.com"><i class="social_icons fa-3x fa-brands fa-linkedin"></i></a>
             </div>
           </div>
 
@@ -38,8 +38,8 @@
             <p class="about_me">About Me</p>
             <p class="about-details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, </p>
             <div class="buttons">
-              <a href="http://drive.google.com"><button type="button" class="btn-lg btn-dark right_button">&nbsp;&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;</button></a>
-              <a href="http://github.com/sazid-reich"><button type="button" class="btn-lg btn-dark right_button">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</button></a> 
+              <a target="_blank" href="http://drive.google.com"><button type="button" class="btn-lg btn-dark right_button">&nbsp;&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;</button></a>
+              <a target="_blank" href="http://github.com/sazid-reich"><button type="button" class="btn-lg btn-dark right_button">&nbsp;&nbsp;&nbsp;Portfolio&nbsp;&nbsp;&nbsp;</button></a> 
             </div>
           </div>
 
